[package]
name = "websiteCompiler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
walkdir = "2.5.0"
regex = "1.10.4"
rayon = "1.10.0"
pathdiff = "0.2.1"
lazy_static = "1.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
